--- a/C0744430a/index.html
+++ b/C0744430a/index.html
@@ -6,7 +6,11 @@
     <link href="css/default.css" rel="stylesheet" />
 </head>
 <body>
-    <div>Content goes here!</div>
+    <div>fffff</div>
     <script src="js/main.js"></script>
+    <script>
+
+        document.write("Yeahh!!!");
+    </script>
 </body>
 </html>
