--- a/C0744430a/index.html
+++ b/C0744430a/index.html
@@ -2,20 +2,22 @@
 <html>
 <head>
     <title>Peter is all great!</title>
+    <script type="text/javascript">
+        function addNumbers(j)
+        {
+            var sum = 0;
+            while (1 < j) { sum += j--; }
+            return sum;
+        }
+    </script>
 </head>
 <body>
     <script>
-        var input1 = prompt("how high should I count up to?");
-        var sum = 0;
-        for (var i = 0; i <= input1; i++) {
-            document.write("<p> Point A: i is " + i);
-            document.write("<p>Point A: sum is " + sum);
-            sum += i;
-            document.write("<p>Point B: sum is " + sum);
-        }
-        document.write("<hr><p>Point c: i is " + i);
-        document.write(sum);
-            //
+        var inputnumber= prompt("state starting number");
+
+        document.write(addNumbers(inputnumber));
+      
+           
     </script>
 
 </body>
